# nasc

./: .editorconfig  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .project  .travis.yml  AUTHORS  BUILDING.md  CMakeLists.txt  README.md  _config.yml  cln.yml  com.github.parnold-x.nasc.gschema.xml  com.github.parnold-x.nasc.yml  com.github.parnold_x.nasc.yml  compile.txt  gtksourceview.yml  index.html  index.md  meson.build  mpfr.yml  net.launchpad.nasc.gschema.xml  params.json  recompile.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
cmake/: GObjectIntrospectionMacros.cmake
data/: com.github.parnold-x.nasc.appdata.xml  com.github.parnold-x.nasc.appdata.xml.in  com.github.parnold-x.nasc.desktop  com.github.parnold-x.nasc.desktop.in  com.github.parnold-x.nasc.gschema.xml  com.github.parnold-x.nasc.yml  com.github.parnold_x.nasc.appdata.xml  com.github.parnold_x.nasc.appdata.xml.in  com.github.parnold_x.nasc.desktop  com.github.parnold_x.nasc.desktop.in  com.github.parnold_x.nasc.gschema.xml  meson.build  nasc.desktop  nasc_template.sheets
data/datasets/: country.xml  datasetsNasc.xml
data/styles/: def.lang  nasc.lang  nasc.xml  nasc_dark.xml  styles.rng
debian/: changelog  control  copyright  rules
debian_meson/: changelog  control
icons/: meson.build
libqalculatenasc/: CMakeLists.txt  Makefile  Makefile.in  QalculateNasc.cc  QalculateNasc.h  config.cmd  config.h  config.md  config.sub  configure.sh  libtool  meson.build
libqalculatenasc/tmp/: libqalculatenasc-cfgcmd.txt
meson/: post_install.py
po/: CMakeLists.txt  LINGUAS  POTFILES  com.github.parnold-x.nasc.pot  de.po  meson.build  nasc.pot  pt.po  pt_BR.po
po/extra/: LINGUAS  POTFILES  extra.pot  meson.build  pt.po  pt_BR.po
src/: Calculator.vala  Config.vala.in  Controller.vala  HelpBox.vala  InputView.vala  ListFooter.vala  MainWindow.vala  MathBinDialog.vala  Nasc.vala  NascSettings.vala  OpenBox.vala  PasteBinDialog.vala  PeriodicTable.vala  ResultBoxWidget.vala  ResultLine.vala  ResultView.vala  Tutorial.vala  config.vala  config.vala.cmake  config.vala.in  meson.build
stylesheets/: stylesheet.css
vapi/: QalculateNasc.vapi
