# Listing files to compile
sources = files (
    'src/Calculator.vala',
    'src/Controller.vala',
    'src/HelpBox.vala',
    'src/InputView.vala',
    'src/ListFooter.vala',
    'src/MainWindow.vala',
    'src/Nasc.vala',
    'src/NascSettings.vala',
    'src/OpenBox.vala',
    'src/PasteBinDialog.vala',
    'src/PeriodicTable.vala',
    'src/ResultBoxWidget.vala',
    'src/ResultLine.vala',
    'src/ResultView.vala',
    'src/Tutorial.vala'
)
