# Listing files to compile
sources = files (
    'Calculator.vala',
    'Controller.vala',
    'HelpBox.vala',
    'InputView.vala',
    'ListFooter.vala',
    'MainWindow.vala',
    'Nasc.vala',
    'NascSettings.vala',
    'OpenBox.vala',
    'PasteBinDialog.vala',
    'PeriodicTable.vala',
    'ResultBoxWidget.vala',
    'ResultLine.vala',
    'ResultView.vala',
    'Tutorial.vala'
)
