# Listing files to compile
sources = files (
    'Calculator.vala',
    'Controller.vala',
    'HelpBox.vala',
    'InputView.vala',
    'ListFooter.vala',
    'MainWindow.vala',
    'MathBinDialog.vala',
    'Nasc.vala',
    'NascSettings.vala',
    'OpenBox.vala',
    'PeriodicTable.vala',
    'ResultBoxWidget.vala',
    'ResultLine.vala',
    'ResultView.vala',
    'Tutorial.vala'
)
